# isr_segawayrmp2

./: README.md  somefile.txt  test.txt
build_isolated/: catkin_make_isolated.cache
build_isolated/RMPISR/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/segway_rmp/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/serial/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/wiimote/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
devel_isolated/RMPISR/: .catkin  .rosinstall  setup.sh
devel_isolated/libsegwayrmp/: setup.bash  setup.sh  setup.zsh
devel_isolated/segway_rmp/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel_isolated/serial/: .catkin  .rosinstall  setup.sh
devel_isolated/wiimote/: .catkin  .rosinstall  setup.sh
install/: .rosinstall  setup.sh
src/RMPISR/: CMakeLists.txt  package.xml  setup.py
src/beginner_tutorials/: CMakeLists.txt
src/learning_tf2/: CMakeLists.txt
src/learning_wiimote/: CMakeLists.txt  mainpage.dox  manifest.xml
src/my_msg/: CMakeLists.txt  package.xml
src/perception/: CMakeLists.txt
src/perception_pkg/: CMakeLists.txt  package.xml  setup.py
src/testeturtle/: CMakeLists.txt  package.xml
src/testeturtle/scripts/: DemonstrationPoints.csv  coordinator.py  odomUp.py
src/testeturtle/src/: CGP.cpp  pontos.txt
src/testeturtle/srv/: go.srv  resetrmp.srv
src/visual_markers/: CMakeLists.txt
src/wiimote/: CMakeLists.txt
testeturtle/launch/: pedroturtle.launch
testeturtle/srv/: addpoint.srv  (+1 more)
(+471 files in other folders)
